--- a/app_admin/src/app/app.component.html
+++ b/app_admin/src/app/app.component.html
@@ -16,7 +16,10 @@
       </ul>     
     </div>
     <div class="navbar-nav d-flex">
-      <a class="nav-link" routerLink="/logout">Logout</a>
+      <a class="nav-link" routerLink="/logout" *ngIf="isLoggedIn(); else logIn">Log out</a>
+      <ng-template #logIn>
+        <a class="nav-link" routerLink="/login">Log in</a>
+      </ng-template>
     </div>
   </div>
 </nav>
